# Teams-AI-ChatBot

./: .dockerignore  .gitattributes  .gitignore  CI_TESTING.md  DEPENDENCY_MANAGEMENT.md  Dockerfile  Dockerfile.debug  README.md  SECURITY.md  clouddev.env  docker-compose.yml  main.py  pyproject.toml  ruff.toml  sonar-project.properties  teamsapp.local.yml  teamsapp.yml
.sonarlint/: connectedMode.json
appPackage/: manifest.json
infra/: azure.parameters.json
security/garak/: Dockerfile  README.md  cloudrun-job.yaml  deploy-job.ps1  entrypoint.sh  ifd_bot_config.yaml  pyproject.toml
src/adaptive_cards/: card_utils.py  data_source_setting.py  function_cards.py  kb_cards.py  modify_page_cards.py
src/bots/: ai_bot.py  console_adapter.py
src/bots/data_model/: __init__.py  app_state.py  history_adaptive_card.py  user_state.py
src/bots/handlers/: commands.py  custom_moderator.py  data_sources.py  dispatcher.py  error.py  feedback.py  good_morning.py  greeting.py  handle_commands.py  handle_document_sprint.py  handle_manage_collection.py  handle_manage_jira.py  handle_manage_page.py  handler_confluence_comment.py  handler_jira_comment.py  handler_jira_sprint.py  handler_jira_ticket.py  handler_n8n_mcp.py  jira_sentiment.py  list_project.py  list_sprint.py  list_ticket.py  manage_collection.py  modify_collection_pages.py  modify_collection_pages_handler.py  rag_process.py  reaction.py  state_handler.py  submit_action.py  web_search_handler.py
src/bots/handlers/attachment/: __init__.py  background_notification.py  convert_file_to_md.py
src/bots/storage/: postgres_storage.py
src/cloud_runs/document_handler/: docs_handler.py  main.py
src/common/: service_result.py
src/config/: ai_config.py  bot_config.py  database_config.py  environment.py  fastapi_config.py  log_setup.py  settings.py  urls.py
src/constants/: action_types.py  api_constant.py  app_constants.py  db_constant.py  docling_constant.py  llm_constant.py  rag_company_constant.py
src/enums/: enum.py
src/prompts/chat/: actions.json  config.json  skprompt.txt
src/routes/: teams_route.py  test_route.py
src/services/cronjob/: main.py
src/services/postgres/: db_utils.py  document_rag.py  operation.py
src/services/rag_services/: url_shortening_service.py
src/services/web_search_service/: __init__.py  web_search_service.py
src/utils/: file_helper.py  gcp_helper.py  msword_helper.py  path_helper.py  secret_manager.py  streams_helper.py  websocket_helper.py
tests/bots/handlers/: test_rag_process_minimal.py
tests/services/rag_services/: __init__.py
(+90 files in other folders)
